# TCC_MLOps_Drift_Detection_Federated

./: README.md  app.py  baixar_dataset.py  client.py  dataset.py  drift_detector.py  main.py  plot_round_metrics.py  pyproject.toml  requirements.txt  run_experiments.sh  run_experiments_parallel.sh  server.py
app/: __init__.py  client.py  server.py
configs/: default.yaml
core/: __init__.py  client_template.py  drift_detection.py  fl_server.py  model_utils.py
dashboard/: plots.py
data/: __init__.py  loader.py  simulate_drift.py
logs/: IID_adwin_20250820_151221.txt  IID_adwin_20250821_114940.txt  IID_entropy_adaptive_20250819_164827.txt  IID_entropy_adaptive_20250820_150920.txt  IID_entropy_adaptive_20250821_114643.txt  IID_entropy_fixed_20250819_164702.txt  IID_entropy_fixed_20250820_150755.txt  IID_entropy_fixed_20250821_114518.txt  IID_kswin_20250819_164953.txt  IID_kswin_20250820_151046.txt  IID_kswin_20250821_114808.txt  IID_wilbik_20250821_115104.txt  IID_wilbik_exactDB_it2.txt  IID_wilbik_exactDB_stdout.txt  IID_wilbik_narrowband.txt  nonIID_adwin_20250819_165327.txt  nonIID_adwin_20250820_151654.txt  nonIID_adwin_20250821_115519.txt  nonIID_entropy_adaptive_20250819_165150.txt  nonIID_entropy_adaptive_20250820_151524.txt  nonIID_entropy_adaptive_20250821_115352.txt  nonIID_entropy_fixed_20250819_165016.txt  nonIID_entropy_fixed_20250820_151352.txt  nonIID_entropy_fixed_20250821_115224.txt  nonIID_kswin_20250820_151824.txt  nonIID_kswin_20250821_115648.txt  (+6 more)
teste/: README.md  pyproject.toml
teste/teste/: __init__.py  client_app.py  server_app.py  task.py
(+430 files in other folders)
