[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teste"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "numpy>=2.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "a"

[tool.flwr.app.components]
serverapp = "teste.server_app:app"
clientapp = "teste.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
